--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans);
 
 /* Reset */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -57,7 +59,7 @@ h2 {
 
 p, .caption {
     font-size: 1.2em;
-    font-family: Open Sans;
+    font-family: Noto Sans;
     padding-bottom: 2em;
     color: #808080;
     line-height: 1.5;
@@ -107,7 +109,7 @@ p, .caption {
         max-width: 100%;
         height: 100%;
     }
-    
+
     #sidebar p {
         padding: 3em 1em 0 1em;
         margin: 0 1em 1em 0;
@@ -129,7 +131,7 @@ footer {
     padding: 2em;
     height: 100%;
     min-height: 100%;
-    
+
 }
 
 @media screen and (max-width: 980px) {
@@ -138,19 +140,19 @@ footer {
         margin-left: 0em;
         margin-right: 0em;
     }
-    
+
     footer {
         display: block;
     }
-    
+
     p {
         font-size: 1em;
     }
-    
+
     h2 {
         font-size: 1.4em;
     }
-    
+
     section {
         margin 2em;
     }
@@ -173,7 +175,7 @@ section + section:before {
 }
 
 #who {
-    
+
 }
 
 /* Project Items */
@@ -209,7 +211,7 @@ a img:hover {
         display: inline-block;
         text-align: center;
         width: 100%;
-    } 
+    }
 }
 
 .avatar {
