Hide appcenter button on mobile

--- a/spice-up/assets/css/_buttons.scss
+++ b/spice-up/assets/css/_buttons.scss
@@ -13,6 +13,12 @@
   margin-right: 24px;
 }
 
+.appcenter {
+  @media #{$mobile} {
+    display: none;
+  }
+}
+
 .inputfile {
 	width: 0.1px;
 	height: 0.1px;
