--- a/spice-up/assets/css/main.css
+++ b/spice-up/assets/css/main.css
@@ -47,6 +47,10 @@ body {
 .button-link {
   margin-right: 24px; }
 
+@media screen and (max-width: 700px) {
+  .appcenter {
+    display: none; } }
+
 .inputfile {
   width: 0.1px;
   height: 0.1px;
