--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,54 +8,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 		border: 0;
 		font-size: 100%;
 		font: inherit;
-		vertical-align: baseline;
+        vertical-align: baseline;
+        box-sizing: border-box;
 	}
 
-/* Carrousel */
-#carousel {
-    margin: 0.5em 1.5em 0.8em 0.1em;
-    display: inline-block;
-}
 
-.carouselI {
-    position: absolute;
-    visibility: hidden;
-}
-
-.carouselI.animated {
-    visibility: visible;
-    display: inline-block;
-}
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-		display: block;
-	}
-
-	body {
-		line-height: 1;
-	}
-
-	ol, ul {
-		list-style: none;
-	}
-
-	blockquote, q {
-		quotes: none;
-	}
-
-	blockquote:before, blockquote:after, q:before, q:after {
-		content: '';
-		content: none;
-	}
-
-	table {
-		border-collapse: collapse;
-		border-spacing: 0;
-	}
-
-	body {
-		-webkit-text-size-adjust: none;
-	}
 
 /* Text Styles */
 
@@ -81,47 +38,16 @@ p, .caption {
     line-height: 1.5;
 }
 
-
-
-
-/* Blocks */
-
 /*Sidebar */
-#sidebar {
+.header {
     font-family: Noto Sans;
-    float: left;
-    position: fixed;
-    max-width: 35%;
-    min-height: 100%;
-    height: 100%;
-    background: url("background.jpg") right bottom;
+    height: 60vh;
+    background: linear-gradient(90deg, #000001 0%, rgba(0, 0, 0, 0.43) 34.69%, rgba(0, 0, 0, 0.24) 100%), url("background.jpg") center;
     background-size: cover;
     background-repeat: no-repeat;
     box-shadow: 0px 0px 5px #666;
 }
 
-#sidebar div {
-    font-size: 1.5em;
-    margin: 0.5em 1.5em 1em 4em;
-    text-shadow: 1px 0px 1px #000;
-    text-align: left;
-    color: white;
-}
-
-#sidebar > #carousel {
-    
-}
-
-#sidebar b {
-    font-size: 1.2em;
-    font-weight: bold;
-}
-
-@media screen and (max-width: 1200px) {
-    #sidebar div {
-        font-size: 1.3em;
-    }
-}
 
 @media screen and (max-width: 980px) {
     #sidebar {
@@ -137,117 +63,66 @@ p, .caption {
     }
 }
 
-footer {
-    display: none;
-    color: red;
-    background-color: darkslategrey;
-    background: url("background.jpg") right bottom;
-    background-size: cover;
-    background-repeat: no-repeat;
+/* Layout */
+
+.grid-container {
+    height: 100vh;
+    display: grid;
 }
 
-#main {
-    max-width: 60em;
-    margin-left: 35%;
-    padding: 2em;
-    height: 100%;
-    min-height: 100%;
 
+.header {
+    grid-column-start: 1;
+    grid-column-end: 6;
 }
 
-@media screen and (max-width: 980px) {
-    #main {
-        max-width: 100%;
-        margin-left: 0em;
-        margin-right: 0em;
-    }
-
-    footer {
-        display: block;
-    }
-
-    p {
-        font-size: 1em;
-    }
-
-    h2 {
-        font-size: 1.4em;
-    }
-
-    section {
-        margin 2em;
-    }
+.grid-item-1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    margin: 32px;
+    margin-top: 16px;
 }
 
-#main section {
-    margin-top: 3em;
+.grid-item-2 {
+    grid-column-start: 2;
+    grid-column-end: 6;
+    margin: 32px;
+    margin-top: 16px;
 }
 
-section + section:before {
-    margin-bottom: 1em;
-    border-top: solid 1px;
-    color: #d1d1d1;
-    bottom: 0;
-    content: '';
-    display: inline-block;
-    left: 0;
-    position: static;
-    width: 100%;
+.flexbox {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-#who {
-
+.project {
+    flex: 1 0 40%;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    padding: 12px;
+    margin-bottom: 24px;
 }
 
-/* Project Items */
-div.item {
-    vertical-align: top;
-    display: inline-block;
-    text-align: center;
-    width: 45%;
-    margin: 0.5em 0.5em 0.5em 0.5em;
+.project .text {
+    align-self: center;
+    margin-left: 6px;
 }
 
-.item img {
-    width: 100%;
-    height: 100%;
-    background-color: grey;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px #888888;
-    border: 1px rgba(255, 106, 106, 0.77);
+.project p {
+    padding-bottom: 0px;
 }
 
-a img:hover {
-    box-shadow: 0px 0px 5px 1px #666;
+.skill {
+    flex: 1 0 23%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.caption {
-    display: block;
-    font-size: 1em;
-}
-
-@media screen and (max-width: 980px) {
-    div.item {
-        vertical-align: top;
-        display: inline-block;
-        text-align: center;
-        width: 100%;
-    }
-}
-
-.avatar {
-    float: right;
-    display: block;
-    margin-bottom: 2em;
-    margin-left: 100%;
-    margin-right: 1.5em;
-    margin-top: 3em;
-    align-content: flex-end;
-    max-width: 32%;
-    max-height: 150px;
-    width: auto;
-    height: auto;
-    border: 1px rgba(106, 106, 106, 0.77);
-    border-radius: 50%;
-    box-shadow: 0px 0px 3px #000;
+.image {
+    height: 64px;
+    width: 64px;
+    min-height: 64px;
+    min-width: 64px;
 }
